# flutter_wry

./: README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/flutter_wry_example/: MainActivity.kt
example/integration_test/: simple_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: flutter_wry.podspec
lib/: flutter_wry.dart
lib/src/: api.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: wry_webview.dart
lib/src/rust/api/wry_webview/: window.dart  window.freezed.dart  wry_webview_config.dart  wry_webview_controller.dart  wry_webview_error.dart  wry_webview_error.freezed.dart
lib/src/rust/wry_webview/: wry_webview_config.dart  wry_webview_controller.dart  wry_webview_error.dart
linux/: CMakeLists.txt
macos/: flutter_wry.podspec
rust/: .gitignore  Cargo.toml
rust/src/: frb_generated.rs  lib.rs  wry_webview.rs
rust/src/api/: mod.rs  wry_webview.rs
rust/src/api/wry_webview/: window.rs  wry_webview_config.rs  wry_webview_controller.rs
rust/src/examples/: sample.rs
rust/src/wry_webview/: mod.rs  raw_window.rs  window.rs  wry_webview_config.rs  wry_webview_controller.rs  wry_webview_error.rs
windows/: CMakeLists.txt
